           for major rework
* 20190817 Remove interactive prompts for helo and from when hostname
           cannot be determined internally.  Just error instead.
* 20190817 Cleaning up error messages that contained extra newlines
* 20190817 Remove re-prompting for port when an invalid service name was
           supplied. Just error and exit instead
* 20191005 Fixed typos in base.pod and recipes.pod
> 20191006 released 20190914.0
* 20191008 Added skeleton of installation doc (missingcharacter)
* 20191009 Added .netrc support (fany)
* 20191012 Added --tls-sni option (lightsey)
* 20191012 Fix bug which treated `SWAKS_OPT_foo=` as `--foo ''` instead of
           `--foo`.  This affected error handling for options which
           required args.
* 20191019 Reimplementation of option processing fixed lots of missed edge
           cases, especially options which were documented to require an
           argument but didn't error if none was provided (--add-header,
           --header, --attach, --attach-type, --attach-body, possibly others)
* 20191021 The --xclient-name, -addr, etc options can now only be provided
           once per call. Multiple uses of one of these options will result
           in only the last one being used.  Previously these options could
           be set multiple times to send the same xclient attribute multiple
           times.  If that's needed, see the --xclient option.
* 20191022 The "no-" option negating now works much better (previously was
           hit-or-miss on special option families like --attach*, --xclient*,
           and --header*.
* 20191023 Ensure "main" choice defined first in each option's list of
           aliases because the first item is used for errors.
* 20191026 Deprecate -g option.  Change current implementation so it is
           rewritten to `--data -` before option processing. Any occurrence
           of `--data` will cause -g to be discarded. "no-" prefix will not
           negate.