@@ -1,0 +1,9 @@
+DATA Info:
+  data = <<.
+To: foo
+From: bar
+Subject: baz
+
+This is the file from data-plain.txt
+
+.
