@@ -1,0 +1,1 @@
+*** Option processing error: file /path/to/TESTDIR/foo.txt not openable for option body (No such file or directory)
