@@ -391,10 +391,16 @@
     18 -g rewrite doesn't disturb --header-Foo processing when it appears immediately following
     19 -g removal doesn't distrub --opt=foo processing when it appears immediately following
     20 -g rewrite doesn't distrub --opt=foo processing when it appears immediately following
+    21 data, @existent-file works
+    22 data, @non-existstent-file works
+    23 data, @@non-file works
 05100 --body
     0 - works inline
     1 - '-' reads from stdin
     2 - works from file
+    3 body, @existent-file works
+    4 body, @non-existstent-file works
+    5 body, @@non-file works
 05200 - headers
     1 - --add-header adds unique
     2 - --add-header adds duplicate
@@ -447,10 +453,16 @@
     0 - works inline
     1 - '-' reads from stdin
     2 - works from file
+    3 attach, @existent-file works
+    4 attach, @non-existstent-file works
+    5 attach, @@non-file works
 05400 --attach
     0 - works inline
     1 - '-' reads from stdin
     2 - works from file
+    3 attach-body, @existent-file works
+    4 attach-body, @non-existstent-file works
+    5 attach-body, @@non-file works
 05500 - body, attach interplay
     0 - baseline. Use --body to set different body value
     1 - --attach argument
